Fix vertical alignment.

--- a/mosfell/assets/scss/s-small.scss
+++ b/mosfell/assets/scss/s-small.scss
@@ -269,6 +269,7 @@ nav {
 
         a {
             height: 39px;
+            line-height: 29px;
             
             &:focus,
             &:hover {
